# OutsetaPy

./: .flake8  .gitignore  LISENSE  __init__.py  pyproject.toml  readme.md  requirements-dev.txt  requirements-meta.txt  requirements-test.txt  requirements.txt  test.py  tox.ini
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  help-me.md
.github/workflows/: formatting.yml  main.yml  test.yml
api/user/: password.py  profile.py
examples/: subscriptions.py  test.py  test2.py  using-requests.py
models/crm/: account.py  activity-type.py  activity.py
models/marketing/: email-list-person.py  emaillist.py
models/shared/: address.py  entity.py
models/support/: case-source.py  case.py
models/wrappers/: list.py
outsetapy/: __init__.py
outsetapy/api/billing/: __init__.py  invoices.py  plan_families.py  plans.py  subscriptions.py  transactions.py
outsetapy/api/crm/: __init__.py  accounts.py  activities.py  deals.py  people.py
outsetapy/api/marketing/: __init__.py  email_list_subscriptions.py
outsetapy/api/support/: __init__.py  cases.py
outsetapy/api/user/: __init__.py  password.py  profile.py
outsetapy/models/billing/: billing_add_on_type.py  billing_renewal_term.py  billing_transaction_type.py  charge_summary.py  invoice.py  invoice_display_item.py  plan.py  plan_add_on.py  subscription.py  subscription_add_on.py  transaction.py
outsetapy/models/crm/: account.py  account_stage.py  activity.py  person.py  person_account.py
outsetapy/models/support/: case.py  case_history.py
outsetapy/util/: credentials.py  request.py
src/: __init__.py
src/api/billing/: plan_families.py
src/models/billing/: add_on.py  invoice_line_item.py  plan_family.py
src/models/crm/: deal_pipeline_stage.py
src/models/marketing/: email_list_person.py
src/models/support/: case_history.py
src/outsetapy/: __init__.py  readme.md  static.py
src/outsetapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/outsetapy/api/billing/: __init__.py  invoices.py  plan_families.py  plans.py  subscriptions.py  transactions.py  usage.py
src/outsetapy/api/crm/: __init__.py  accounts.py  activities.py  deals.py  people.py
src/outsetapy/api/marketing/: __init__.py  email_list_subscriptions.py
src/outsetapy/api/support/: __init__.py  cases.py
src/outsetapy/api/user/: __init__.py  password.py  profile.py
src/outsetapy/models/billing/: add_on.py  billing_add_on_type.py  billing_renewal_term.py  billing_transaction_type.py  charge_summary.py  invoice.py  invoice_display_item.py  invoice_line_item.py  plan.py  plan_add_on.py  plan_family.py  (+4 more)
src/outsetapy/util/: credentials.py  request.py
tests/: conftest.py  utils.py
tests/integration/: test_examples.py
tests/unit/: test_models.py
util/: credentials.py  request.py  store.py
(+20 files in other folders)
