[project]
name = "outsetapy"
version = "0.1.0"
authors = [
  { name="Roborian, Inc", email="info@roborian.com" },
]
description = "A SDK for building applications with Outseta"
readme = "README.md"
long_description = """
# OutsetaPy : Outseta SDK for python

We created a Outseta SKD because we truely believe that outseta is the best membership management platorm in existance.

## Installation

pip install outsetapy

## Usage

OutsetaPy is a asynchronious library, so it has to run inside a async thread.
See ./examples/ to learn how to use it

## API Reference

Comming soon

## Contributing

Provide guidelines on how to contribute to your project.

### Code formatting>

we use black to perform automatic code formatting, and flake8 for linting

## License

GNU AGPLv3

## Contact and Support

Support options can be found on our [Patreon](https://www.patreon.com/savelkouls) 
If you are developing a startup, and need help with the development of your product? Send us a message on info@roborian.com and we will be able to help you with it.
"""
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Roborian/outsetapy"
Issues = "https://github.com/Roborian/outsetapy/issues"